# photon_mapping

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  main.cpp
include/: camera.h  core.h  image.h  integrator.h  light.h  material.h  photon_map.h  primitive.h  sampler.h  scene.h  shape.h  triangle.h
models/: cornellbox-water2.mtl
tests/: CMakeLists.txt  test_camera.cpp  test_image.cpp  test_intersector.cpp  test_path_tracing.cpp  test_photon_map.cpp  test_plane.cpp  test_sphere.cpp  visualize_photon_map.cpp
